--- a/css/css-demo/styles/practice.css
+++ b/css/css-demo/styles/practice.css
@@ -3,4 +3,6 @@
 border-radius: 25px;
 padding: 10px;
 margin-top: 10px}
-.class {font-size: .8em}
+.list {font-size: .8em}
+.test {color: blue}
+ul >li {color: pink}
