making the only commit I've made on this entire assignment because my partner and I were forgetful

--- a/css/gps/gps2-1.css
+++ b/css/gps/gps2-1.css
@@ -1,1 +1,27 @@
-body {background-color: limegreen;}
+header, footer {
+  background-color: blue;
+  border: 2px black solid;
+}
+header {
+  background-image: url("https://static.pexels.com/photos/104827/cat-pet-animal-domestic-104827.jpeg");
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+    
+}
+.column-1 {
+  border: 2px black solid;
+  display:inline-block;
+  width: 49%;
+  background-color: beige;
+  margin-top: 50px;
+  padding-top: 30px;
+}
+.column-2 {
+  border: 2px black solid;
+  display:inline-block;
+  width: 49%;
+  background-color: gray;
+  
+}
+.column-1 article {
+  font-style: helvetica;
